# pipecat-esp32-xvf3800

./: .env.example  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  devices.example.json  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/peer/: CMakeLists.txt  peer_connection.c  red_unwrap.c  red_unwrap.h  rtp.c  rtp_sequence.c  rtp_sequence.h
components/peer/libpeer/src/: ice.c  rtp.h
docs/: AEC_GAIN_STAGING_POSTMORTEM.md  BUILD_AND_FLASH.md  DUAL_STREAM.md  HTTP_API.md  PLAYBACK_RESILIENCE.md  XVF3800_REGISTER_COOKBOOK.md
scripts/: __init__.py  asr_routing_lint.py  check_docs.py  device_identity.py  dualstream_lint.py  flash.sh  gen_fir_taps.py  i2s_role_lint.py  mic_sanity_check.py  publication_gate.py  verify_build_config.py
src/: CMakeLists.txt  decode_ladder.c  decode_ladder.h  http.cpp  idf_component.yml  main.cpp  main.h  media.cpp  ota.cpp  pipecat_build_config.h.in  prebuffer_ctl.c  prebuffer_ctl.h  rtvi.cpp  rtvi_callbacks.cpp  selftest_clip.pcm  webrtc.cpp  wifi.cpp
tests/: test_guards.py
tests/host/: run_decode_ladder_tests.sh  run_prebuffer_tests.sh  run_red_tests.sh  run_rtp_sequence_tests.sh  test_decode_ladder.c  test_prebuffer_ctl.c  test_red_unwrap.c  test_rtp_sequence.c
