set(PEER_PROJECT_PATH "${CMAKE_CURRENT_LIST_DIR}/libpeer")
file(GLOB CODES "${PEER_PROJECT_PATH}/src/*.c")
list(FILTER CODES EXCLUDE REGEX ".*/peer_connection\\.c$")
# rtp.c vendored locally: adds RTP seq-gap detection + PLC signaling (NULL
# payload callback per lost packet) to rtp_decode_generic — upstream ignores
# seq numbers entirely, which produced audible clicks on every lost UDP packet
# (the 2026-07-09 residual-crackle root cause).
list(FILTER CODES EXCLUDE REGEX ".*/rtp\\.c$")

idf_component_register(
  SRCS ${CODES} "peer_connection.c" "rtp.c" "rtp_sequence.c" "red_unwrap.c"
  INCLUDE_DIRS "${PEER_PROJECT_PATH}/src" "."
  REQUIRES mbedtls srtp json esp_netif
)

if(NOT IDF_TARGET STREQUAL linux)
  add_definitions("-DESP32 -DCONFIG_USE_LWIP=1 -DCONFIG_AUDIO_BUFFER_SIZE=8096 -DCONFIG_DATA_BUFFER_SIZE=102400 -D__BYTE_ORDER=__LITTLE_ENDIAN")
endif()

# Force ECDSA, because aiortc doesn't want to use RSA.
# KeepAlive timeout (ms): the server sends periodic STUN binding keepalives (ICE
# consent freshness, ~5s cadence); if none arrive for this long the peer
# transitions to CLOSED and the device esp_restart()s to re-offer. Upstream
# default is 10000. It was previously 0 (disabled), which left the device stuck
# in COMPLETED forever when the server vanished — requiring a manual power-cycle.
#
# 10000 was too aggressive: on a marginal 2.4GHz link that roamed to a
# congested AP), transient UDP packet loss creates ~10-15s audio gaps that
# SELF-HEAL (measured: server logs audio resume with no reconnect) — but the 10s
# keepalive fired right at that boundary and rebooted a recovering connection,
# producing the ~20-85s "peer churn" that split wake turns. Raised to 30000 so
# self-healing RF blips survive; a genuinely dead server is still caught quickly
# by the PEER_CONNECTION_FAILED handler + the 30s initial-connect watchdog, and
# within 30s here as the backstop. (root-caused 2026-07-07: the same firmware was
# stable at -33dBm on a clean AP but churned at -53dBm on a congested AP, proving
# RF+keepalive interaction rather than deterministic application failure.)
add_definitions("-DHTTP_DO_NOT_USE_CUSTOM_CONFIG -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -DCONFIG_DTLS_USE_ECDSA=1 -DCONFIG_USE_USRSCTP=0 -DDISABLE_PEER_SIGNALING=0 -DCONFIG_KEEPALIVE_TIMEOUT=30000")
